objects/Invoice_Product__c.object
<CustomObject>
    <fields>
        <fullName>Invoice__c</fullName>
        <label>Invoice</label>
        <referenceTo>Invoice__c</referenceTo>
        <relationshipLabel>Invoice Products</relationshipLabel>
        <relationshipName>Invoice_Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <label>Product Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Qty__c</fullName>
        <label>Qty</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <formula>Qty__c  *  UnitPrice__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UnitPrice__c</fullName>
        <label>Unit Price</label>
        <precision>16</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Invoice Product</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Invoice__c</columns>
        <columns>Product_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>IP-{0000}</displayFormat>
        <label>Invoice Product Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>